I tried to tinker with the 'Our Mission' bar for quite a while (on the education page). I made it look better, but there may seem to be a lot more lines changed than was actually changed. I only really fixed the spacing in the end, and I also fixed a bug where the MSSG logo was going all over the place, I fixed it to inbetween the two blocks of words when the screen is xs-size. The real reason for this commit was to add Debarati Das to the education page (bye-bye :( felix).

--- a/scss/global/global/_global-helpers.scss
+++ b/scss/global/global/_global-helpers.scss
@@ -121,6 +121,7 @@
   .g-promo-section__img {
     &-left--xs { @include position(absolute, $top: 0, $left: 0); }
     &-right--xs { @include position(absolute, $top: 0, $right: 0); }
+    &-center--xs { @include $left: 10% }
   }
 }
 
@@ -147,7 +148,6 @@
     &-right--lg { @include position(absolute, $top: 0, $right: 0); }
   }
 }
-
 
 /*----------------------------------
   Horizontal Center Align
